[metadata]
name = kybra-simple-vault
version = 0.1.1
description = A canister to store and manage transactions of chain-key tokens (e.g. ckBTC) on the Internet Computer. Written in Python using Kybra.
author = Smart Social Contracts
author_email = info@smartsocialcontracts.ch
license = MIT
license_file = LICENSE

[flake8]
max-line-length = 200
exclude = .git,__pycache__,build,dist,.kybra,tests/.kybra
ignore = F403,F405,W503,E501,W391,F401,E722,F811,E704

[flake8:**/tests/*]
ignore = F403,F405,W503,F841

[isort]
profile = black
multi_line_output = 3

[mypy]
python_version = 3.10
warn_return_any = False
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = False
disallow_untyped_decorators = False
no_implicit_optional = False
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
ignore_errors = True
exclude = tests/.kybra
# Handle duplicate module names
namespace_packages = True
# Use explicit module paths for tests
explicit_package_bases = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=vault --cov-report=term-missing
